2011-12-15  James Hunt  <james.hunt@ubuntu.com>

	* Makefile.am: Add missing TESTING.sessions to distribution.
	* contrib/vim/syntax/upstart.vim: Meta-data update and addition
	  of more standard (Ubuntu Upstart) events.
	* extra/man/upstart-udev-bridge.8: Ensure literal dashes used
	  for all command-line options.
	* extra/upstart-udev-bridge.c:
	  - udev_monitor_watcher(): Fix leak when obtaining udev value.
	  - make_safe_string(): Don't realloc since overhead too high
	  considering size of strings.
	* init/job_class.c: Typo.
	* init/job_process.c: job_process_spawn():
	  - Correct ignoring of SIGCHLD prior to grantpt(3) call.
	  - Removed redundant close(2) calls.
	  - Move declarations to top of block for
	    getpwnam(3)/getgrnam(3).
	* init/log.c:
	  - log_file_open(): Comments.
	  - log_file_write(): Added missing cast on
	    nih_io_buffer_shrink() call.
	* init/main.c: console_type_setter(): NihOptionSetter's should
	  return 0 on success.
	* init/man/init.5: lower-case all references to system jobs
	  and user jobs.
	* init/tests/test_job_process.c: Add missing include for
	  fnmatch.h.

2011-12-15  James Hunt  <james.hunt@ubuntu.com>

	* init/tests/test_job_process.c: test_run():
	  - Ensure process group killed for multi-process shell scripts.
	  - Change 'command-not-found' tests to use regex matching rather
	    than literal to allow for minor differences in /bin/sh variants
	    error output.

2011-12-13  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Bump version to 1.5
	* NEWS: Begin new release

2011-12-13  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.4
	* configure.ac (NIH_COPYRIGHT): Update

2011-12-12  James Hunt  <james.hunt@ubuntu.com>

	Simplify logfile name encoding.
	
	* init/job_process.c: job_process_log_path(): Ditch D-Bus job name
	  encoding in path names for saner approach that simply remaps slash
	  characters (minimal surprises for users).
	* init/job_process.h: Addition of macros:
	  - JOB_PROCESS_LOG_FILE_EXT